HTML Quickstarts Code Update

--- a/HTML Quickstart/index.html
+++ b/HTML Quickstart/index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <div style="color: red; font-family: Impact; background-color: green">
-      <h1>Hello, World!</h1>
-      <h2>Hello, World!</h2>
-      <h3>Hello, World!</h3>
-      <h4>Hello, World!</h4>
-      <p>Hello, World!</p>
-      <p style="font-size: x-large">Hello, World!</p>
+  <body style="color: red;">
+    <h1>HTML Quickstart</h1>
+    <ul>
+      <li>h1: <h1>Heading 1</h1></li>
+      <li>h2: <h2>Heading 2</h2></li>
+      <li>h3: <h3>Heading 3</h3></li>
+    </ul>
+    <img style="width: 100px;" src="https://www.reliancedigital.in/medias/Canon-EOS-200D-II-DSLR-Camera-491431412-i-2-1200Wx1200H?context=bWFzdGVyfGltYWdlc3w4MjA3M3xpbWFnZS9qcGVnfGltYWdlcy9oZWIvaGE0LzkxMzgzODQwMTEyOTQuanBnfGVkZjVkNzAxZDU3OGZlNWYwOGY0OTA0YjA4YzgzMjYyNGFkYzYwMzE4YjgyNDhmODFmMDU4YTM0NTI2Zjc3ZjA" alt="">
+    <a href="https://aryan-karani.vercel.app/kidwithacamera">This is an anchor tag</a>
+    <div style="color: blue;">
+      <h1>This is inside a div</h1>
+      <p>I want this text to be blue he he h eh eh eh ehe eh eh </p>
     </div>
-    <div>
-      <table style="border: 1px solid blue; border-collapse: collapse">
-        <tr>
-          <th style="border: 1px solid blue; padding: 5px">Heading 1</th>
-          <th style="border: 1px solid blue; padding: 5px">Heading 2</th>
-          <th style="border: 1px solid blue; padding: 5px">Heading 3</th>
-        </tr>
-        <tr style="text-align: center; color: green; background-color: red">
-          <td style="border: 1px solid blue; padding: 5px">value 1</td>
-          <td style="border: 1px solid blue; padding: 5px">value 2</td>
-          <td style="border: 1px solid blue; padding: 5px">value 3</td>
-        </tr>
-      </table>
-    </div>
-    <div>
-      <ul style="list-style: lower-roman">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-      </ul>
-      <ol>
-        <li>Item 1</li>
-        <li>item 2</li>
-        <li>Item 3</li>
-      </ol>
-    </div>
-    <img src="./KidWithACamera.png" alt="" />
-    <a href="https://www.youtube.com/@aryankarani">Subscribe</a>
   </body>
 </html>
